fixing the css so it doesn't get in the way on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,10 +65,11 @@ time, mark, audio, video {
 
 footer {
 	text-align: center;
-	position: absolute;
+	position: fixed;
 	bottom: 25px;
 	width: 100%;
-	color: #777;
+	color: #999;
+	font-size: 11px;
 }
 	footer a {
 		text-decoration: none;
